:lipstick: Fix horizontal scroll in mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,3 +33,8 @@ body,
 body {
   min-height: 100vh;
 }
+
+.columns,
+.columns:last-child {
+    margin: 0
+}
